--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,22 @@ Version: 1.0
 
 @font-face {font-family: 'Poppins', sans-serif;font-family: 'Oranienbaum', serif;}
 
+/*==========================================================================
+|
+|   Custom Font
+|
+|
+===========================================================================*/
+
+@font-face {
+    font-family: 'park_lane_nfregular';
+    src: url('../fonts/webfontkit-20221222-040836/parklanenf-webfont.woff2') format('woff2'),
+         url('../fonts/webfontkit-20221222-040836/parklanenf-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /* ==========================================================================
 
 	Base styles: opinionated defaults
@@ -112,7 +128,13 @@ a:focus, img:focus, button:focus, .btn:focus {outline:none;text-decoration: none
 
 .header hgroup h1{ padding:0; margin:0}
 
-.header hgroup h1 a{ display:block; float:left; max-width:81px}
+.header hgroup h1 a{ display:block; float:left; max-width:117px}
+
+.header hgroup h1 img{
+	height: 35px;
+	width: 117px;
+
+}
 
 .main-menu {background-color: transparent;position: fixed;width: 100%;height:100%;top: 0px;right: 0px;z-index:2;}
 
@@ -120,12 +142,12 @@ a:focus, img:focus, button:focus, .btn:focus {outline:none;text-decoration: none
 
 .menu.over{background-color:rgba(255,255,255,0.8);}
 
-.nav-icon{ float:right;font-family: 'Oranienbaum', serif; display:block; position:relative; text-transform:uppercase; font-size:14px; letter-spacing:4px; color:#222222;}
+.nav-icon{ float:right;font-family: 'Oranienbaum', serif; display:block; position:relative; text-transform:uppercase; font-size:28px; letter-spacing:4px; color:#222222;}
 
-.menu {transition: all 0.40s ease-out; width:60px; height:30px; cursor:pointer; position:absolute; right:0; top:0; z-index:5; border-radius:100%;}
+.menu {transition: all 0.40s ease-out; width:117px; height:45px; cursor:pointer; position:absolute; right:0; top:0; z-index:5; border-radius:100%;}
 
-.nav-icon p{ position:absolute; right:0; top:0; background-image:url(../images/nav.png); background-repeat:no-repeat; background-position:0 7px; padding-left:11px}
-
+.nav-icon p{font-family: 'park_lane_nfregular', serif; font-size: 35px;position:absolute; right:0; top:0; padding-left:11px}; height: ai
+/*background-image:url(../images/nav.png); background-repeat:no-repeat; background-position:0 7px*/
 .over {transform: scale(100);transition: all 0.350s ease-in;cursor: default;}
 
 .linea1 {background: #222222;height: 2px;width: 15px;position: absolute;right: 33px;top: 33px;z-index:90;transition: all 0.3s;opacity:0}
@@ -176,17 +198,17 @@ a:focus, img:focus, button:focus, .btn:focus {outline:none;text-decoration: none
 
 .main-menu ul li {width:100%; display:inline-block;font-family: 'Oranienbaum', serif; text-transform:uppercase; font-size:30px; margin-bottom:30px; font-weight:400; position:relative;z-index:1;  transition: all 0.400s;transition-delay: 0.370s;}
 
-.main-menu ul li{ position:relative; ; }
+.main-menu ul li{ position:relative; }
 
-.main-menu ul li:after {content: "";position:absolute;bottom:52%; left:0; right:0; margin:0 auto;width:0; height:1px;background:#222222;
+.main-menu ul li:after {content: "";position:absolute;bottom:0%; left:0; right:0; margin:0 auto;width:6%; height:1px; background:#222222; /*deals with underline in over menu*/
 
 z-index:2;transition: width 0.3s; z-index:1}
 
-.main-menu ul li:hover:after{ width:15%; }
+.main-menu ul li:hover:after{ width:6%; bottom: 50%; height: 1px}
 
-.main-menu ul li.active:after{ width:15%;}
+.main-menu ul li.active:after{ width:6%; bottom: 50%; height: 1px}
 
-.main-menu ul li a {text-decoration: none; color:#222222; position:relative; z-index:2; display:block}
+.main-menu ul li a {font-family: 'park_lane_nfregular'; text-decoration: none; color:#222222; position:relative; z-index:2; display:block;} /* over menu text */
 
 /* ==========================================================================
 
@@ -290,7 +312,7 @@ z-index:2;transition: width 0.3s; z-index:1}
 
 .map-wrapper #google-maps {
 	position: relative;
-	height:453px;
+	height: 453px;
     overflow: hidden;
 }
 
